# ganglion

./: .gitignore  DEVELOPMENT.md  DEVELOPMENT_PLAN.md  README.md  RESET_BRIEF.md  ROADMAP_ZERO_BASE.md  alembic.ini  pyproject.toml
archive/legacy-pre-zero-base/: .env.example  README.md  pyproject.toml
archive/legacy-pre-zero-base/brains/agents/surgeon/: manifest.json
archive/legacy-pre-zero-base/brains/shared/core/: memory_policy.md  tool_contract.md
archive/legacy-pre-zero-base/ganglion/antennule/: openclaw_adapter.py
archive/legacy-pre-zero-base/ganglion/carapace/: manifests.py
archive/legacy-pre-zero-base/ganglion/config/: settings.py
archive/legacy-pre-zero-base/ganglion/eyestalk/: metrics.py  service.py
archive/legacy-pre-zero-base/ganglion/forager/: search.py
archive/legacy-pre-zero-base/ganglion/mandible/: response_processor.py
archive/legacy-pre-zero-base/ganglion/molt/: candidates.py  scheduler.py
archive/legacy-pre-zero-base/ganglion/pleon/: orchestrator.py
archive/legacy-pre-zero-base/ganglion/shellbank/: artifacts.py  exports.py  object_store.py
archive/legacy-pre-zero-base/ganglion/supra/: compiler.py  selectors.py
archive/legacy-pre-zero-base/ganglion/tracer/: models.py  service.py
archive/legacy-pre-zero-base/ganglion/ventral/: service.py
archive/legacy-pre-zero-base/scripts/: import_openclaw_agent_state.py  render_live_binding.py  run_cortex_api.py
archive/legacy-pre-zero-base/tests/fixtures/step7a/: request_confidential.json  (+1 more)
archive/legacy-pre-zero-base/tests/step8/: test_cortex_api.py  test_render_live_binding.py
(+85 files in other folders)
