[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ganglion"
version = "0.1.0"
description = "Distributed brain, memory, routing, and optimisation architecture behind OpenClaw"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.2,<3",
  "sqlalchemy>=2.0,<3",
  "psycopg[binary]>=3.1,<4",
  "alembic>=1.13,<2",
  "python-dotenv>=1.0,<2",
  "structlog>=24.1,<25",
  "pytest>=8.0,<9",
]

[tool.setuptools.packages.find]
include = ["ganglion*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
